[project]
name = "xdotool"
version = "0.4.0"
description = "Library to use xdotool with python"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Tlaloc-Es", email = "dev@tlaloc-es.com"}
]
keywords = ["xdotool"]
classifiers = ["License :: OSI Approved :: MIT License"]

[project.urls]
Homepage = "https://github.com/Tlaloc-Es/xdotool"
Repository = "https://github.com/Tlaloc-Es/xdotool"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pylint",
    "pytest",
    "black",
    "mypy",
    "ipykernel",
    "ipython",
    "commitizen",
    "poethepoet",
    "isort",
]

[tool.commitizen]
version = "0.4.0"
version_files = ["pyproject.toml:^version"]
tag_format = "$version"
